build: Update cmake to specify correct lib path
Change-Id: Ieabe7e6df305fa21de424c3865d7289f0dd98394

--- a/layers/CMakeLists.txt
+++ b/layers/CMakeLists.txt
@@ -222,6 +222,11 @@ if(WIN32)
     endif()
 elseif(UNIX)   # UNIX includes APPLE
     foreach(TARGET_NAME ${TARGET_NAMES})
+        add_custom_target(${config_file}-staging-json ALL
+                          COMMAND sed -i -e "/\"library_path\":/s$./libVkLayer$libVkLayer$"
+                                  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}.json
+                          VERBATIM
+                          DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}.json)
         install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}.json DESTINATION
             ${CMAKE_INSTALL_DATAROOTDIR}/vulkan/explicit_layer.d
         )
